--- a/trip_planner_front/src/page/INN/innMain.css
+++ b/trip_planner_front/src/page/INN/innMain.css
@@ -211,15 +211,21 @@
   font-family: pt-b;
   font-size: 20px;
 }
+.content-box > .like-review {
+  display: flex;
+}
 .content-box > .like-review > * {
   font-size: 12px;
   color: #717171;
-  margin-right: 5px;
 }
 .content-box > .like-review > .review-box {
   color: #1e1e1e;
   font-family: pt-b;
   color: #ccc;
+}
+.content-box > .like-review > .icon {
+  color: #30e462;
+  font-size: 20px;
 }
 .content-box > .inn-type {
   font-size: 10px;
