--- a/trip_planner_front/src/page/INN/innDetailView.css
+++ b/trip_planner_front/src/page/INN/innDetailView.css
@@ -81,7 +81,7 @@
 }
 .inn-detail-rooms {
   margin: 0 auto;
-  width: 70%;
+  max-width: 70%;
   background-color: #f1f1f1;
   margin-bottom: 20px;
   border-radius: 10px;
@@ -110,13 +110,57 @@
 .hashTagItem span {
   font-family: pt-b;
 }
-.room-box-left img {
-  display: block;
-  max-width: 500px;
-  height: auto;
-  max-height: 376px;
-  border-radius: 10px;
+
+.inn_room_slide {
+  width: 420px;
+  height: 312px;
 }
+
+.inn_room_slide .swiper-slide {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.inn_room_slide .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-position: center;
+  object-fit: cover;
+}
+
+.inn_room_slide .swiper-button-prev {
+  left: 12px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.6)
+    url(/public/images/icon_arrow_prev_black_40.svg) no-repeat center / contain;
+}
+.inn_room_slide .swiper-button-prev::after {
+  display: none;
+}
+.inn_room_slide .swiper-button-next {
+  right: 12px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.6)
+    url(/public/images/icon_arrow_prev_black_40.svg) no-repeat center / contain;
+  transform: rotate(180deg);
+}
+.inn_room_slide .swiper-button-next::after {
+  display: none;
+}
+.inn_room_slide .swiper-pagination-bullet-active {
+  background-color: #fff;
+}
+.inn_room_slide .swiper-pagination {
+  bottom: 12px;
+}
+
 .room-box-right {
   flex-grow: 1;
 }
@@ -184,18 +228,19 @@
   bottom: 0;
   border-radius: 5px;
 }
-.inn_slide .swiper-slide > a {
+.inn_slide .swiper-slide {
   display: block;
+  height: 480px;
 }
 .inn_slide .swiper-slide img {
-  width: 80%;
-  height: 480px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
   border-radius: 10px;
 }
 .inn_slide .swiper-button-prev {
-  left: calc((100% - 1280px) / 2);
+  left: 12px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -206,7 +251,7 @@
   display: none;
 }
 .inn_slide .swiper-button-next {
-  right: calc((100% - 1280px) / 2);
+  right: 12px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
