--- a/trip_planner_front/src/page/mypage/createTrips.css
+++ b/trip_planner_front/src/page/mypage/createTrips.css
@@ -1,5 +1,5 @@
 .contents.trips{max-width: none; width: calc(100% + 80px); margin-left: -40px; padding: 0;}
-.createTrips_wrap{display: flex; height: 700px; min-height: calc(100vh - 61px); border-top: 1px solid var(--line_03);}
+.createTrips_wrap{display: flex; height: 700px; min-height: calc(100vh - 61px);}
 .createTrips_wrap>.map_area{flex-grow: 1;}
 .createTrips_wrap>.left_area{position: relative; display: flex;}
 .createTrips_wrap .trips_wrap{position: relative; display: flex; flex-direction: column; width: 377px; padding: 30px 0 105px; border-right: 1px solid var(--line_03); background-color: #fff;}
@@ -74,10 +74,10 @@
 .createTrips_wrap .search_wrap .search_input_wrap .search_input{display: flex; border-bottom: 1px solid #000;}
 .createTrips_wrap .search_wrap .search_input_wrap .search_input>input{flex: 1; border: none;}
 .createTrips_wrap .search_wrap .search_input_wrap .search_input>.btn_search{display: block; width: 40px; height: 40px; background: url(/public/images/icon_search.svg) no-repeat center / 36px;}
-.createTrips_wrap .search_wrap .search_result_wrap{padding: 20px 20px 0;}
+.createTrips_wrap .search_wrap .search_result_wrap{height: 100%; padding: 20px 20px 0; overflow-y: auto;}
 .createTrips_wrap .search_wrap .search_result_wrap .result_title{font-family: pt-b; font-size: 16px; line-height: 1.5;}
 .createTrips_wrap .search_wrap .search_result_wrap .result_title~.result_title{margin-top: 20px;}
-.createTrips_wrap .search_wrap .search_result_wrap .result_place_area{max-height: 500px; margin: 8px 0; overflow-y: auto;}
+.createTrips_wrap .search_wrap .search_result_wrap .result_place_area{margin: 8px 0; overflow-y: auto;}
 .createTrips_wrap .search_wrap #pagination{display: flex; justify-content: center; align-items: center; gap: 4px; padding: 20px 0;}
 .createTrips_wrap .search_wrap #pagination>a{display: block; width: 30px; font-size: 12px; line-height: 30px; text-align: center;}
 .createTrips_wrap .search_wrap #pagination>a.on{border-radius: 50%; background-color: var(--main_03); font-family: pt-eb; font-size: 13px;}
