--- a/trip_planner_front/src/page/tour/myTour.css
+++ b/trip_planner_front/src/page/tour/myTour.css
@@ -226,3 +226,56 @@
 }
 
 /* 찜 목록 */
+.tour-like-wrap {
+  display: flex;
+  padding: 20px 30px;
+  margin: 20px 10px;
+  border: 1px solid var(--line_03);
+  border-radius: 20px;
+}
+
+.tour-like-wrap .tour-like-left {
+  flex: 1;
+  margin-right: 20px;
+}
+
+.tour-like-wrap .tour-like-right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.tour-like-wrap .tour-like-name {
+  font-family: pt-b;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+.tour-like-wrap .tour-like-type {
+  margin-bottom: 5px;
+  color: #666;
+}
+
+.tour-like-wrap .tour-like-img img {
+  width: 250px;
+  height: 166px;
+  border-radius: 10px;
+}
+
+.tour-like-wrap .tour-like-right div {
+  margin-bottom: 5px;
+}
+
+.tour-like-wrap .tour-like-title {
+  color: #999;
+}
+.tour-like-wrap .tour-like-title div {
+  color: #1e1e1e;
+}
+
+.tour-like-wrap .tour-like-right .tour-like-btn {
+  margin-bottom: 20px;
+}
+
+.tour-like-wrap .tour-like-right .tour-like-btn button:first-child {
+  margin-right: 10px;
+}
