투어 자잘 수정

--- a/trip_planner_front/src/page/tour/tour.css
+++ b/trip_planner_front/src/page/tour/tour.css
@@ -181,6 +181,7 @@
   width: 300px;
   margin-right: 40px;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .tour-prod-zone > .tour-prod > .tour-prod-info {
