--- a/trip_planner_front/src/page/mypage/mypage.css
+++ b/trip_planner_front/src/page/mypage/mypage.css
@@ -49,6 +49,7 @@
 .myCoupons_list{display: flex; flex-wrap: wrap; gap: 20px;}
 .myCoupons_list>li{width: calc(50% - 10px);}
 .myCoupons_list .couponItem{display: flex;}
+.myCoupons_list .couponItem.completed,
 .myCoupons_list .couponItem.disabled{opacity: 0.4;}
 .myCoupons_list .couponItem .coupon_info{flex-grow: 1; padding: 20px 0; box-shadow: 7px 7px 20px rgba(0,0,0, 0.12);}
 .myCoupons_list .couponItem .coupon_info>.inner{position: relative; width: calc(100% + 24px); padding: 0 20px; border-right: 1px dashed var(--line_02); background-color: #fff;}
@@ -70,6 +71,11 @@
 .myCoupons_list .couponItem .coupon_status::before{content: ''; position: absolute; top: -35px; left: -54px; width: 36px; height: 36px; border: 18px solid  #4285bd; border-radius: 50%; background-color: transparent; clip: rect(36px, auto, auto, 36px); box-sizing: content-box;}
 .myCoupons_list .couponItem .coupon_status::after{content: ''; position: absolute; bottom: -36px; left: -54px; width: 36px; height: 36px; border: 18px solid  #4285bd; border-radius: 50%; background-color: transparent; clip: rect(auto auto 36px 36px); box-sizing: content-box;}
 .myCoupons_list .couponItem .coupon_status .status{color: #fff; font-family: pt-b; font-size: 14px; line-height: 1.5;}
+
+.myCoupons_list .couponItem.disabled .coupon_status{background-color: #717171;}
+.myCoupons_list .couponItem.disabled .coupon_status>.inner{background-color: #717171;}
+.myCoupons_list .couponItem.disabled .coupon_status::before{border-color: #717171;}
+.myCoupons_list .couponItem.disabled .coupon_status::after{border-color: #717171;}
 
 .createTrips_wrap .place_list>.item .tripRoute_no.color1{background-color: #FD5189;}
 .createTrips_wrap .place_list>.item .tripRoute_no.color2{background-color: #FFCD30;}
