swal 및 join 핸드폰 정규표현식 수정

--- a/trip_planner_front/src/page/admin/admin.css
+++ b/trip_planner_front/src/page/admin/admin.css
@@ -87,7 +87,7 @@
     padding: 40px;
   }
 
-  .contents.memberMgmtView #block_btn{
+  .contents.memberMgmtView .block_btn{
     display: flex;
     justify-content: center;
   }
